--- a/ged-webapp/src/main/resources/elasticsearch.yml
+++ b/ged-webapp/src/main/resources/elasticsearch.yml
@@ -7,7 +7,7 @@
 # Cluster name identifies your cluster for auto-discovery. If you're running
 # multiple clusters on the same network, make sure you're using unique names.
 #
- cluster.name: simple_ged
+ cluster.name: simple_edm
 
 
 #################################### Node #####################################
@@ -15,7 +15,7 @@
 # Node names are generated dynamically on startup, so you're relieved
 # from configuring them manually. You can tie this node to a specific name:
 #
-# node.name: "Simple Ged"
+# node.name: "Simple EDM"
 
 
 #################################### Paths ####################################
