--- a/edm-webapp/src/main/resources/elasticsearch.yml
+++ b/edm-webapp/src/main/resources/elasticsearch.yml
@@ -26,7 +26,7 @@
 
 # Path to directory where to store index data allocated for this node.
 #
- path.data: ./es/data
+ path.data: ./edm/es/data
 #
 # Can optionally include more than one location, causing data to be striped across
 # the locations (à la RAID 0) on a file level, favouring locations with most free
@@ -36,15 +36,15 @@
 
 # Path to temporary files:
 #
- path.work: ./es/work
+ path.work: ./edm/es/work
 
 # Path to log files:
 #
- path.logs: ./es/logs
+ path.logs: ./edm/es/logs
 
 # Path to where plugins are installed:
 #
- path.plugins: ./es/plugins
+ path.plugins: ./edm/es/plugins
 
 
 ################################## Discovery ##################################
