--- a/edm-webapp/src/main/resources/edm-configuration.properties
+++ b/edm-webapp/src/main/resources/edm-configuration.properties
@@ -1,1 +1,5 @@
+# where are files stored ?
 edm.files_path.root=./edm/files/
+
+# a temporary directory (need space, for temporary files)
+edm.tmpdir=./edm/tmpdir/
