--- a/edm-webapp/pom.xml
+++ b/edm-webapp/pom.xml
@@ -43,6 +43,8 @@
 
 		<commons-io.version>2.4</commons-io.version>
 		<org.apache.commons.commons-lang3.version>3.1</org.apache.commons.commons-lang3.version>
+		
+		<commons-fileupload.version>1.3.1</commons-fileupload.version>
 
 		<com.google.guava.version>16.0</com.google.guava.version>
 	</properties>
@@ -300,6 +302,15 @@
 			<version>${org.apache.commons.commons-lang3.version}</version>
 		</dependency>
 
+
+		<!-- File upload -->
+
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>${commons-fileupload.version}</version>
+		</dependency>
+		            
 
 		<!-- google -->
 
