Update to ES 1.0
Warning : using spring-data-es snapshot !

--- a/edm-webapp/pom.xml
+++ b/edm-webapp/pom.xml
@@ -21,15 +21,15 @@
 		<org.slf4j.version>1.7.5</org.slf4j.version>
 		<ch.qos.logback.version>1.0.13</ch.qos.logback.version>
 
-		<org.elasticsearch.version>0.90.9</org.elasticsearch.version>
-		<org.elasticsearch.elasticsearch-mapper-attachments.version>1.9.0</org.elasticsearch.elasticsearch-mapper-attachments.version>
+		<org.elasticsearch.version>1.0.1</org.elasticsearch.version>
+		<org.elasticsearch.elasticsearch-mapper-attachments.version>2.0.0.RC1</org.elasticsearch.elasticsearch-mapper-attachments.version>
 
 		<org.springframework.version>4.0.0.RELEASE</org.springframework.version>
 		<org.springframework.data.version>1.4.3.RELEASE</org.springframework.data.version>
 		<org.springframework.data.spring-data-rest-webmvc.version>2.0.0.M1</org.springframework.data.spring-data-rest-webmvc.version>
 		<org.springframework.boot.version>0.5.0.M6</org.springframework.boot.version>
 		<org.springframework.data.spring-data-commons-core.version>1.4.1.RELEASE</org.springframework.data.spring-data-commons-core.version>
-		<org.springframework.data.spring-data-elasticsearch.version>1.0.0.M1</org.springframework.data.spring-data-elasticsearch.version>
+		<org.springframework.data.spring-data-elasticsearch.version>1.0.0.BUILD-SNAPSHOT</org.springframework.data.spring-data-elasticsearch.version>
 
 		<com.fasterxml.jackson.core.version>2.2.3</com.fasterxml.jackson.core.version>
 
@@ -77,7 +77,6 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</repository>
-		<!--
 		<repository>
 			<id>spring-snapshots</id>
 			<url>http://repo.spring.io/libs-snapshot</url>
@@ -85,7 +84,6 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
-		-->
 	</repositories>
 
 	<pluginRepositories>
