--- a/edm-webapp/src/main/resources/properties/constants.properties
+++ b/edm-webapp/src/main/resources/properties/constants.properties
@@ -2,8 +2,8 @@
 # This file contains software constants
 #
 
-APPLICATION_NAME=Simple GED
+APPLICATION_NAME=Simple EDM
 
 APPLICATION_VERSION=5.0
 
-APPLICATION_ISSUES_URL=https://github.com/xaviermichel/simple-ged/issues
+APPLICATION_ISSUES_URL=https://github.com/xaviermichel/simple-edm/issues
