--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>fr.simple.edm</groupId>
 	<artifactId>simple-edm</artifactId>
-	<version>5.0</version>
+	<version>${edm.version}</version>
 	<name>Simple edm</name>
 	<description>A simple edm</description>
 	<packaging>pom</packaging>
@@ -29,8 +29,6 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<edm.mainwindow.name>Simple edm</edm.mainwindow.name>
-
 		<edm.version>5.0</edm.version>
 	</properties>
 
