--- a/edm-webapp/pom.xml
+++ b/edm-webapp/pom.xml
@@ -15,7 +15,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-		<edm.version>5.0</edm.version>
+		<edm.version>5.0-RC1</edm.version>
 		<start-class>fr.simple.edm.Application</start-class>
 
 		<org.slf4j.version>1.7.5</org.slf4j.version>
@@ -43,7 +43,7 @@
 
 		<commons-io.version>2.4</commons-io.version>
 		<org.apache.commons.commons-lang3.version>3.1</org.apache.commons.commons-lang3.version>
-		
+
 		<commons-fileupload.version>1.3.1</commons-fileupload.version>
 
 		<com.google.guava.version>16.0</com.google.guava.version>
@@ -99,12 +99,12 @@
 	<dependencies>
 
 		<!-- Jetty -->
-		
+
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>spring-boot-starter-jetty</artifactId>
 		</dependency>
-		
+
 
 		<!-- modules -->
 
@@ -308,7 +308,7 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>${commons-fileupload.version}</version>
 		</dependency>
-		            
+
 
 		<!-- google -->
 
