--- a/edm-contracts/pom.xml
+++ b/edm-contracts/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>simple-edm</artifactId>
 		<groupId>fr.simple.edm</groupId>
-		<version>5.0-RC2</version>
+		<version>5.0</version>
 		<relativePath>..</relativePath>
 	</parent>
 
