--- a/edm-webapp/src/main/resources/properties/constants.properties
+++ b/edm-webapp/src/main/resources/properties/constants.properties
@@ -4,6 +4,6 @@
 
 APPLICATION_NAME=Simple EDM
 
-APPLICATION_VERSION=5.0
+APPLICATION_VERSION=5.1-SNAPSHOT
 
 APPLICATION_ISSUES_URL=https://github.com/xaviermichel/simple-edm/issues
